--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ diff-match-patch==20121119
 Django==1.11.6
 djangorestframework==3.7.1
 et-xmlfile==1.0.1
-ipython==6.2.1
+ipython
 ipython-genutils==0.2.0
 jdcal==1.3
 jedi==0.11.0
@@ -25,104 +25,7 @@ unicodecsv==0.14.1
 wcwidth==0.1.7
 xlrd==1.1.0
 xlwt==1.3.0
-colorama==0.3.9
-decorator==4.1.2
-diff-match-patch==20121119
-dj-database-url==0.4.2
-Django==1.11.6
-djangorestframework==3.7.1
-et-xmlfile==1.0.1
-gunicorn==19.7.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-jdcal==1.3
-jedi==0.11.0
-mock==2.0.0
-odfpy==1.3.5
-openpyxl==2.4.9
-parso==0.1.0
-pbr==3.1.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-Pygments==2.2.0
-python-dateutil==2.6.1
-pytz==2017.2
-PyYAML==3.12
-simplegeneric==0.8.1
-six==1.11.0
-tablib==0.12.1
-traitlets==4.3.2
-unicodecsv==0.14.1
-wcwidth==0.1.7
-whitenoise==3.3.1
-xlrd==1.1.0
-xlwt==1.3.0
-colorama==0.3.9
-decorator==4.1.2
-diff-match-patch==20121119
-dj-database-url==0.4.2
-Django==1.11.6
-djangorestframework==3.7.1
-et-xmlfile==1.0.1
-gunicorn==19.7.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-jdcal==1.3
-jedi==0.11.0
-mock==2.0.0
-odfpy==1.3.5
-openpyxl==2.4.9
-parso==0.1.0
-pbr==3.1.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-psycopg2==2.7.3.2
-Pygments==2.2.0
-python-dateutil==2.6.1
-pytz==2017.2
-PyYAML==3.12
-simplegeneric==0.8.1
-six==1.11.0
-tablib==0.12.1
-traitlets==4.3.2
-unicodecsv==0.14.1
-wcwidth==0.1.7
-whitenoise==3.3.1
-xlrd==1.1.0
-xlwt==1.3.0
-colorama==0.3.9
-decorator==4.1.2
-diff-match-patch==20121119
-dj-database-url==0.4.2
-Django==1.11.6
-djangorestframework==3.7.1
-et-xmlfile==1.0.1
-gunicorn==19.7.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-jdcal==1.3
-jedi==0.11.0
-mock==2.0.0
-odfpy==1.3.5
-openpyxl==2.4.9
-parso==0.1.0
-pbr==3.1.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-psycopg2==2.7.3.2
-Pygments==2.2.0
-python-dateutil==2.6.1
-pytz==2017.2
-PyYAML==3.12
-simplegeneric==0.8.1
-six==1.11.0
-tablib==0.12.1
-traitlets==4.3.2
-unicodecsv==0.14.1
-wcwidth==0.1.7
-whitenoise==3.3.1
-xlrd==1.1.0
-xlwt==1.3.0
+backports.shutil-get-terminal-size==1.0.0
 colorama==0.3.9
 decorator==4.1.2
 diff-match-patch==20121119
@@ -130,24 +33,26 @@ dj-database-url==0.4.2
 Django==1.11.6
 django-cors-headers==2.1.0
 djangorestframework==3.7.1
+enum34==1.1.6
 et-xmlfile==1.0.1
-gunicorn==19.7.1
-ipython==6.2.1
+ipython==5.5.0
 ipython-genutils==0.2.0
 jdcal==1.3
 jedi==0.11.0
-mock==2.0.0
 odfpy==1.3.5
 openpyxl==2.4.9
 parso==0.1.0
-pbr==3.1.1
+pathlib2==2.3.0
+pexpect==4.3.1
 pickleshare==0.7.4
+pkg-resources==0.0.0
 prompt-toolkit==1.0.15
-psycopg2==2.7.3.2
+ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.6.1
 pytz==2017.2
 PyYAML==3.12
+scandir==1.6
 simplegeneric==0.8.1
 six==1.11.0
 tablib==0.12.1
