--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ parso==0.1.0
 pathlib2==2.3.0
 pexpect==4.3.1
 pickleshare==0.7.4
-pkg-resources==0.0.0
+pkg-resources
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
