--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-cors-headers==2.1.0
 djangorestframework==3.7.1
 enum34==1.1.6
 et-xmlfile==1.0.1
+gunicorn
 jdcal==1.3
 jedi==0.11.0
 odfpy==1.3.5
