psycog2 added in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.6.1
 pytz==2017.2
+psycopg2
 PyYAML==3.12
 scandir==1.6
 simplegeneric==0.8.1
